# Vladimirov-MS-Thesis

./: README.rst
.doctrees/: environment.pickle  index.doctree  info.doctree  installation.doctree  train.doctree
code/: collect_data_ball_machine.ipynb  collect_data_human_player.ipynb  define-causal-lag.ipynb  main-eeg-imu.ipynb  make_csv_from_bn.py  post-hoc-analysis.ipynb  pyproject.toml  temp.py  test-bnlearn.ipynb  test-gp.ipynb  two-imu-one-dyn-syst.ipynb
data/two-imu-one-dyn-syst/: acc-1.csv  gyr-1.csv
paper/: Vladimirov2024GenerativeCIPaper.tex  arxiv.sty  main.tex  preamble.tex  references.bib  title.tex
slides/: Vladimirov2024GenerativeCISlides.tex
